added first image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<h1>{customize - hi! I'm michelle}</h1>
 						</div>
 						<div class="image">
-							<img src="images/michelle_picture.jpg" alt="michelle_picture" />
+							<img src="images/michelle_picture.png" alt="michelle_picture" />
 						</div>
 					</section>
 
