Grammar and Readability Fixes

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
 						<div class="content">
 							<h2>My Credentials</h2>
-							<p>Michelle earned her entry level physiotherapy degree in 1995 from the University of Queensland, Australia. Upon graduating, Michelle moved to London where she worked in the NHS (national health service) up until 1999. In 2000 Michelle returned to University of Queensland to earn her post graduate degree in Physiotherapy specializing in Manual musculoskeletal medicine.
-								Upon completion of her post graduate degree she returned to London to private practice in outpatient orthopedics. In 2001 Michelle moved to Austin, Texas where she continued to work in the outpatient clinical setting. In 2013 Michelle opened up her own practice, MK Manual Therapy. She also joined the University of St. Augustine as a faculty lab instructor for Instructional Delivery for the DPT program. For the past 10 years she continues to teach in 7 different classes for musculoskeletal therapy, soft tissue massage and movement science exercises. She has enjoyed this immensely, as she gets to impart her knowledge while mentoring the next generation of Physical Therapists.
+							<p>Michelle earned her entry level physiotherapy degree in 1995 from the University of Queensland, Australia. Upon graduating, Michelle moved to London where she worked in the NHS (National Health Service) up until 1999. In 2000, Michelle returned to the University of Queensland to earn her post graduate degree in Physiotherapy, specializing in manual musculoskeletal medicine.
+								Upon completion of her post graduate degree, she returned to London to begin her private practice in the outpatient orthopedics setting. In 2001, Michelle moved to Austin, Texas, where she continued to work in the outpatient clinical setting. In 2013, Michelle opened up her own practice, MK Manual Therapy. She also joined the University of St. Augustine as a faculty lab instructor for the DPT program. For the past 10 years she continues to teach in 7 different classes for musculoskeletal therapy, soft tissue massage, and movement science exercises. She has enjoyed this immensely, as she gets to impart her knowledge while mentoring the next generation of Physical Therapists.
 								</p>
 						</div>
 						<div class="image">
@@ -76,7 +76,7 @@
 								<h2>Services Offered</h2>
 								<br>
 								<div style="display: flex; justify-content: space-between; flex-direction: row;">
-									<div><h3>Manual treatment for:</h3>
+									<div><h3>Manual Physical Therapy for:</h3>
 										<ul>
 											<li>Neck</li>
 											<li>Back</li>
@@ -94,8 +94,8 @@
 											<li>Core exercises</li>
 											<li>Bands training</li>
 											<li>Weight training</li>
-											<li>Yoga exercises</li>
-											<li>Pilates exercises</li>
+											<li>Yoga</li>
+											<li>Pilates</li>
 											<!-- Add more items as needed -->
 										</ul></div>
 								
@@ -112,7 +112,7 @@
 				<!-- Seven -->
 					<section class="wrapper style1 align-center" id="fourth">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Get in Touch</h2>
 							<ul>
 								<p>Email: michellekugler@hotmail.com
 								<br>Phone: 512-517-1625
