Added Headaches and TMJ to list

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 								<div style="display: flex; justify-content: space-between; flex-direction: row;">
 									<div><h3>Manual Physical Therapy for:</h3>
 										<ul>
+											<li>Headaches</li>
+											<li>Temporomandibular Joint</li>
 											<li>Neck</li>
 											<li>Back</li>
 											<li>Shoulders</li>
