Changed TMJ long to short

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									<div><h3>Manual Physical Therapy for:</h3>
 										<ul>
 											<li>Headaches</li>
-											<li>Temporomandibular Joint</li>
+											<li>TMJ</li>
 											<li>Neck</li>
 											<li>Back</li>
 											<li>Shoulders</li>
