Changed me to michelle (3rd person)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>About Me</h2>
+							<h2>About Michelle</h2>
 							<p>
 								Michelle was born in Paris, France. She moved around in childhood between Europe, India, Dubai & Australia, and enjoys traveling to this day. 
 
