Changed my to michelle in professional experience

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
 						<div class="content">
-							<h2>My Professional Experience</h2>
+							<h2>Michelle's Professional Experience</h2>
 							<p>Michelle earned her entry level physiotherapy degree in 1995 from the University of Queensland, Australia. 
 								Upon graduating, Michelle moved to London where she worked in the NHS (National Health Service) up until 1999. 
 								In 2000, Michelle returned to the University of Queensland to earn her post graduate degree in Physiotherapy, specializing in manual musculoskeletal medicine.
