Added BFR certification

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 							<h1>Hi! I'm Michelle</h1>
 							<p>Texas Board Certified Physical Therapist<br>
 								Bachelor of Physiotherapy<br>
-								Master of Physiotherapy (Specializing in Musculoskeletal Physiotherapy)
+								Master of Physiotherapy (Specializing in Musculoskeletal Physiotherapy)<br>
+								Certified in Personalized Blood Flow Restriction (BFR) Rehabilitation
 							</p>
 
 						</div>
