Added BFR rehab to strength training

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 											<li>Weight training</li>
 											<li>Yoga</li>
 											<li>Pilates</li>
+											<li>Blood Flow Restriction Rehabilitation</li>
 											<!-- Add more items as needed -->
 										</ul>
 										<h3>Treatments Include: </h3>
