--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<p>
 								Michelle was born in Paris, France. She moved around in childhood between Europe, India, Dubai & Australia, and enjoys traveling to this day. 
 
-								<br>When she is not teaching students or treating patients, Michelle likes to spend time with her husband, 21 year old son, and 16 year old daughter. She also loves yoga, weight training, and Pilates, which she incorporates into her patients' treatments. 
+								<br>When she is not teaching students or treating patients, Michelle likes to spend time with her husband, son, and daughter. She also loves yoga, weight training, and Pilates, which she incorporates into her patients' treatments. 
 								</p>
 						</div>
 						<div class="image">
